# Voxel-Lab

./: .gitignore  README.md
.stfolder/: syncthing-folder-34dd14.txt
src/: CMakeLists.txt  TODO.md  main.cpp  mingw-w64-toolchain.cmake
src/core/: Application.cpp  Application.hpp  InputHandler.cpp  InputHandler.hpp
src/graphics/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/libs/: Chunk.cpp  Chunk.hpp  Renderer.cpp  Renderer.hpp  Terrain.cpp  Terrain.hpp  VBO.hpp  Vertexpool.hpp  camera.h  fs.glsl  fs.txt  shader.cpp  shader.hpp  vs.glsl  vs.txt
src/libs/glad/include/glad/: glad.h
src/shaders/: fs.glsl  vs.glsl
src/terrain/: Chunk.cpp  Chunk.hpp  Terrain.cpp  Terrain.hpp  terrain_config.hpp
src/util/: Camera.hpp  Config.hpp  FrameTimer.cpp  FrameTimer.hpp  Tick.cpp  Tick.hpp
